# forecasting-timeseries-challenge

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
docker/: Dockerfile  docker-compose.yml
forecasting/: const.py
forecasting/clients/: api.py  streamlit.py
forecasting/infra/: injector.py
forecasting/infra/fastapi/: dependencies.py  main.py
forecasting/infra/fastapi/routers/: dtos.py  inference.py
forecasting/infra/logging/: __init__.py
forecasting/models/: const.py  core.py  entities.py  factories.py  prophet.py  simple_average.py
forecasting/tests/clients/: api_test.py
forecasting/tests/infra/fastapi/dependencies/: inference_service_test.py
forecasting/tests/models/: factories_test.py  prophet_test.py  simple_average_test.py
