[tool.poetry]
name = "forecasting-app"
version = "0.1.0"
description = ""
authors = ["Jonathan Loscalzo <jonathan.loscalzo@trueaccord.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^25.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
