[tool.poetry]
name = "forecasting-app"
version = "0.1.0"
description = ""
authors = ["Jonathan Loscalzo <jonathan.loscalzo@trueaccord.com>"]
readme = "README.md"

[tool.pytest.ini_options]
pythonpath = ["forecasting"]
testpaths = ["forecasting/tests"]

[tool.poetry.dependencies]
python = "^3.12"
black = "^25.1.0"
pandas = "^2.2.3"
pydantic = "^2.10.6"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
flake8-pyproject = "^1.2.3"
pre-commit = "^4.1.0"
pylint = "^3.3.4"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120

[tool.pytest]
addopts = "-ra -q"
