[tool.poetry]
name = "forecasting"
version = "0.1.0"
description = ""
authors = ["Jonathan Loscalzo <jonathan.loscalzo@trueaccord.com>"]
readme = "README.md"

[tool.pytest.ini_options]
pythonpath = ["forecasting"]
testpaths = ["forecasting/tests"]
markers = ["integration"]

filterwarnings = ["ignore::DeprecationWarning:holidays"]

[tool.pytest]
addopts = "-ra -q"

[tool.poetry.dependencies]
python = "^3.12"
black = "^25.1.0"
dependency-injector = "^4.45.0"
fastapi = { extras = ["standard"], version = "^0.115.8" }
loguru = "^0.7.3"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
prophet = "^1.1.6"
pydantic = "^2.10.6"
streamlit = "^1.42.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.6.11"
flake8 = "^7.1.1"
flake8-pyproject = "^1.2.3"
isort = "^6.0.0"
pre-commit = "^4.1.0"
pylint = "^3.3.4"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120


[tool.poetry.scripts]
forecast-ui = "forecasting.clients.streamlit:init"
forecast-api = "forecasting.clients.api:main"
